--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,18 @@
 body {
     background: salmon;
 }
+
+html, button, input, select, textarea,
+.pure-g [class *= "pure-u"] {
+    /* Set your content font stack here: */
+    font-family: Georgia, Times, "Times New Roman", serif;
+}
+
+
+
+.pure-g > div {
+    box-sizing: border-box;
+}
+.l-box {
+    padding: 1em;
+}
