--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,74 +1,249 @@
 
 body {
-    background: #525252;
-}
-h1,h2,h3,h4,p{
-    color: white;
-    text-align: center;
-}
-
-html, button, input, select, textarea,
-.pure-g [class *= "pure-u"] {
-    /* Set your content font stack here: */
-    font-family: Georgia, Times, "Times New Roman", serif;
-}
-
-/* Header */
-.header{
-    background-color: #333;
-text-align: center;
-font-size: 60px;
-color: white;
-padding: 50px;
-}
-
-
-.pure-g > div {
-    box-sizing: border-box;
-}
-
-
-           /* MAIN ID's */
-#type-workout{
-    text-align: center;
-    padding: 20px;
-}
-#time-workout{
-    text-align: center;
-    padding: 20px;
-}
-#welcome-question{
-    color: white;
-    padding: 10px;
-    font-size: 40px;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  li {
-    float: right;
-    padding: 0 10px;
+    <<<<<<< HEAD
+        background: #525252;
+    }
+    h1,h2,h3,h4,p{
+        color: white;
+        text-align: center;
+    }
     
-  }
-  
-  li a {
-    display: block;
-    color: white;
+    html, button, input, select, textarea,
+    .pure-g [class *= "pure-u"] {
+        /* Set your content font stack here: */
+        font-family: Georgia, Times, "Times New Roman", serif;
+    }
+    
+    /* Header */
+    .header{
+        background-color: #333;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover {
-    background-color: #111;
-  }
-
+    font-size: 60px;
+    color: white;
+    padding: 50px;
+    }
+    
+    
+    .pure-g > div {
+        box-sizing: border-box;
+    }
+    
+    
+               /* MAIN ID's */
+    #type-workout{
+        text-align: center;
+        padding: 20px;
+    }
+    #time-workout{
+        text-align: center;
+        padding: 20px;
+    }
+    #welcome-question{
+        color: white;
+        padding: 10px;
+        font-size: 40px;
+    }
+    
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+      
+      li {
+        float: right;
+        padding: 0 10px;
+        
+      }
+      
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      
+      li a:hover {
+        background-color: #111;
+      }
+    =======
+      background: salmon;
+    }
+    
+    /* for exercise cards */
+    /* #chosen-exercises .ui-selecting { background: #FECA40; }
+    #chosen-exercises .ui-selected { background: #F39814; color: white; } */
+    #chosen-exercises {
+      margin: 0;
+      padding: 0;
+      width: 450px;
+    }
+    #chosen-exercises li {
+      list-style-type: none;
+      margin: 3px;
+      padding: 1px;
+      float: left;
+      width: 100px;
+      height: 80px;
+      font-size: 1em;
+      text-align: left;
+      background: gray;
+    }
+    
+    .hide {
+        display: none;
+    }
+    
+    .overlay {
+        -webkit-filter: brightness(50%);
+    }
+    =======
+    /* [Object] Modal
+     * =============================== */
+     .modal {
+        opacity: 0;
+        visibility: hidden;
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        text-align: left;
+        background: rgba(0,0,0, .9);
+        transition: opacity .25s ease;
+      }
+      
+      .modal__bg {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        cursor: pointer;
+      }
+      
+      .modal-state {
+        display: none;
+      }
+      
+      .modal-state:checked + .modal {
+        opacity: 1;
+        visibility: visible;
+      }
+      
+      .modal-state:checked + .modal .modal__inner {
+        top: 0;
+      }
+      
+      .modal__inner {
+        transition: top .25s ease;
+        position: absolute;
+        top: -20%;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 50%;
+        margin: auto;
+        overflow: auto;
+        background: #fff;
+        border-radius: 5px;
+        padding: 1em 2em;
+        height: 50%;
+      }
+      
+      .modal__close {
+        position: absolute;
+        right: 1em;
+        top: 1em;
+        width: 1.1em;
+        height: 1.1em;
+        cursor: pointer;
+      }
+      
+      .modal__close:after,
+      .modal__close:before {
+        content: '';
+        position: absolute;
+        width: 2px;
+        height: 1.5em;
+        background: #ccc;
+        display: block;
+        transform: rotate(45deg);
+        left: 50%;
+        margin: -3px 0 0 -1px;
+        top: 0;
+      }
+      
+      .modal__close:hover:after,
+      .modal__close:hover:before {
+        background: #aaa;
+      }
+      
+      .modal__close:before {
+        transform: rotate(-45deg);
+      }
+      
+      @media screen and (max-width: 768px) {
+          
+        .modal__inner {
+          width: 90%;
+          height: 90%;
+          box-sizing: border-box;
+        }
+      }
+      
+      
+      /* Other
+       * =============================== */
+      body {
+        padding: 1%;
+        font: 1/1.5em sans-serif;
+        text-align: center;
+      }
+      
+      .btn {
+        cursor: pointer;
+        background: #27ae60;
+        display: inline-block;
+        padding: .5em 1em;
+        color: #fff;
+        border-radius: 3px;
+      }
+      
+      .btn:hover,
+      .btn:focus {
+        background: #2ecc71;
+      }
+      
+      .btn:active {
+        background: #27ae60;
+        box-shadow: 0 1px 2px rgba(0,0,0, .2) inset;
+      }
+      
+      .btn--blue {
+        background: #2980b9;
+      }
+      
+      .btn--blue:hover,
+      .btn--blue:focus {
+        background: #3498db;
+      }
+      
+      .btn--blue:active {
+        background: #2980b9;
+      }
+      
+      p img {
+        max-width: 200px;
+        height: auto;
+        float: left;
+        margin: 0 1em 1em 0;
+      }
+    
+    >>>>>>> dev
 
   .hide {
       display: none;
