--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  background-color: #333;
+  /* background-color: #333; */
 }
       
 /* li {
@@ -81,6 +81,7 @@ li a:hover {
   border: 2px solid black;
   position: relative;
   border-radius: 10px;
+  
 }
 
 .container {
@@ -98,6 +99,7 @@ li a:hover {
   background-color: rgba(0, 0, 0, 0.25);
   box-sizing: border-box;
   z-index: 5;
+  
 }
 
 .hide{
@@ -133,7 +135,14 @@ h4 {
 }
 
 #exercises {
-  width: 60%;
+  width: 68%;
+  height: 300px;
+  overflow: scroll;
+  margin-top: 20px;
+  padding-left: 5px;
+}
+#exercises li {
+ text-align: left;
 }
 
 h5 {
