--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,11 @@ h4 {
  text-align: left;
 }
 
+#exercise-list li {
+  border-bottom: 1px black solid;
+
+}
+
 h5 {
   font-size: 20px;
   height: 30px;
