--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ html, button, input, select, textarea,
 } 
 
 /* Header */
-.header{
+header{
   background-color: #333;
   text-align: center;
   font-size: 60px;
@@ -39,7 +39,7 @@ html, button, input, select, textarea,
 
 h2 {
   color: white;
-  /* padding: 10px; */
+  
   font-size: 40px;
 }
     
@@ -47,7 +47,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  /* background-color: #333; */
+  
 }
   
 #final-buttons {
@@ -89,9 +89,8 @@ ul {
 }
 
 #search-bar {
-  width: 30%;
-  border-right: 1px solid black;
-  /* padding: 5px */
+  border-right: 0px;
+  border-bottom: 1px solid black;
   text-align: left;
 }
 
@@ -114,7 +113,7 @@ h4 {
 }
 
 #exercises {
-  width: 68%;
+  /* width: 100%; */
   height: 300px;
   overflow: scroll;
   margin-top: 20px;
@@ -166,6 +165,9 @@ h5 {
   color: black; 
   font-size: 16px;
   text-align: left;
+  margin: 0;
+  margin-bottom: 10px;
+  padding-left: 5px;
 }
 
 #chosen-list button {
@@ -201,4 +203,26 @@ h5 {
   padding: 5px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   max-width: 1000px;   
+}
+
+@media screen and (min-width: 64em) {
+  #search-bar {
+    border-bottom: 0;
+    border-right: 1px solid black;
+  }
+
+  #exercise-modal {
+    max-width: 600px;
+  }
+}
+@media screen and (max-width: 600px) {
+  header {
+    font-size: 2.5em;
+  }
+}
+
+@media screen and (max-width: 406px) {
+  header {
+    font-size: 2.0em;
+  }
 }
